[package]
name = "imnodes"
version = "0.2.0"
edition = "2021"
authors = ["Benedikt Mandelkow", "imnodes-rs contributors"]
description = "Rust bindings to https://github.com/Nelarius/imnodes"
license = "MIT/Apache-2.0"
categories = ["gui", "api-bindings"]
readme = "README.md"

[dependencies]
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.104"
imnodes-sys = { version = "0.2.0", path = "imnodes-sys" }
imgui = "0.11.0"

[features]
# export all low level functions
include_low_level_bindings = []

[workspace]
members = ["imnodes-sys", "imnodes-wgpu-examples", "imnodes-sys-bindgen"]
